--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title>welcome to Shall's blog</title>
+    <title>welcome to Shallju's blog</title>
     </head>
 
     <style>
@@ -36,7 +36,7 @@
             
             </style>
     <body>
-    <h1>Welcome to Palmerx's blog
+    <h1>Welcome to Shallju's blog
     </h1>
     
     <h2><p>一：信息与系统   
